--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,12 @@ readme = "README.md"
 python = "^3.12"
 django = "^5.1.6"
 django-environ = "^0.12.0"
+djangorestframework = "^3.15.2"
+poetry = "^2.1.1"
 
+
+[tool.poetry.group.dev.dependencies]
+isort = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
