--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1.6"
 django-environ = "^0.12.0"
 djangorestframework = "^3.15.2"
 poetry = "^2.1.1"
+django-cors-headers = "^4.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
