--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-environ = "^0.12.0"
 djangorestframework = "^3.15.2"
 poetry = "^2.1.1"
 django-cors-headers = "^4.7.0"
+django-model-utils = "^5.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
