--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,12 @@ djangorestframework = "^3.15.2"
 poetry = "^2.1.1"
 django-cors-headers = "^4.7.0"
 django-model-utils = "^5.0.0"
+pillow = "^11.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
 isort = "^6.0.0"
+django-extensions = "^3.2.3"
 
 [build-system]
 requires = ["poetry-core"]
