--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ poetry = "^2.1.1"
 django-cors-headers = "^4.7.0"
 django-model-utils = "^5.0.0"
 pillow = "^11.1.0"
+pytest-django = "^4.10.0"
+factory-boy = "^3.3.3"
 
 
 [tool.poetry.group.dev.dependencies]
