--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ django-model-utils = "^5.0.0"
 pillow = "^11.1.0"
 pytest-django = "^4.10.0"
 factory-boy = "^3.3.3"
+djangorestframework-simplejwt = "^5.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
