--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ pillow = "^11.1.0"
 pytest-django = "^4.10.0"
 factory-boy = "^3.3.3"
 djangorestframework-simplejwt = "^5.4.0"
+drf-yasg = "^1.21.8"
 
 
 [tool.poetry.group.dev.dependencies]
